<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

        <string name="app_name">What is my IP?</string>
        <string name="yourip">Your external IP is:</string>
        <string name="btn_copy_title">Copy</string>
        <string name="btn_refresh_title">Refresh</string>
        <string name="btn_preferences_title">Preferences</string>
        <string name="edt_your_interface_ip">Your internal IP is:</string>
        <string name="edt_in_launch">IP Address</string>
        <string name="copyright_text">Copyright &#169; Mitch Davis</string>
        <string name="toast_copied">Copied</string>
        <string name="toast_to_clipboard">to clipboard!</string>
        <string name="info_please_wait">Loading...</string>
        <string name="info_error">Error</string>
        <string name="info_response_long">Response too long or error.</string>
        <string name="about_text">External IP</string>
        <string name="settings">Settings</string>
        <string name="about">About</string>
    <string name="about_body"><![CDATA[
        <b>What is my IP</b>, a simple app developed out of boredom by <b>Mitch Davis</b>.<br/>
        <a href=\'https://plus.google.com/110105349583610522975\'>Google+</a>&nbsp;&nbsp;
        <a href=\'https://github.com/mitchelldavis44\'>GitHub</a>&nbsp;&nbsp;
        <br/><i>Special thanks to <a href=\'https://github.com/afollestad/\'>Aidan Follestad</a> for his material dialogs library.</i>
    ]]></string>
        <string name="dismiss">Dismiss</string>
        <string name="appwidget_text">EXAMPLE</string>
        <string name="add_widget">Add widget</string>
        <string name="title_activity_main2">Main2Activity</string>
    <string name="ssidtxt">SSID</string>
    <string name="ssidtitle">SSID:</string>
    <string name="choose">Choose</string>


</resources>
