<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mts2792.samplenavdrawer.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="#000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:background="#000">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourip"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:textColor="#fff" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/extip"
                android:text="@string/edt_in_launch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:textColor="#fff" />

            <ImageButton
                android:id="@+id/btnExtIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:background="@android:color/transparent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtandroidid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:text="@string/edt_your_interface_ip"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:textColor="#fff" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/androidip"
                android:text="@string/edt_in_launch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:textColor="#fff" />

            <ImageButton
                android:id="@+id/btnIntIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:background="@android:color/transparent" />

            </RelativeLayout>

        <TextView
            android:id="@+id/ssidTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:text="@string/ssidtitle"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:textColor="#fff" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/infolbl"
                android:text="@string/ssidtxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:textColor="#fff" />

            <ImageButton
                android:id="@+id/btninfolbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:background="@android:color/transparent" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
